--- a/Review Submission page/review.css
+++ b/Review Submission page/review.css
@@ -32,43 +32,46 @@ textarea {
 }
 
 input[type="submit"] {
-  background-color: rgb(255, 95, 31);
+  background-color:rgb(255, 95, 31);
   color: white;
-  height: 36px;
+  height:36px;
   width: 135px;
-  border-radius: 107px;
-  cursor: point;
+  border-radius:107px;
+  cursor:point;
   margin-right: 8px;
-  border: none;
-}
-input[type="submit"]:hover {
-  opacity: 0.7;
-}
+  border:none;
+  
+  }
+  input[type="submit"]:hover{
+
+      opacity:0.7;
+  }
 input[type="email"],
 input[type="password"],
 input[type="text"],
 input[type="number"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+width: 100%;
+padding: 10px;
+margin-bottom: 20px;
+border: 1px solid #ccc;
+border-radius: 5px;
 }
 
-.form-group {
-  margin-bottom: 15px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-input[type="checkbox"] {
-  margin-right: 5px;
-  margin-bottom: 20px;
-}
-
-.checkbox-group label {
-  display: inline-block;
-}
+  .form-group {
+      margin-bottom: 15px;
+    }
+    
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    
+    
+    input[type='checkbox'] {
+      margin-right: 5px;
+      margin-bottom: 20px;
+    }
+    
+    .checkbox-group label {
+      display: inline-block;
+    }
