--- a/Home page/home.css
+++ b/Home page/home.css
@@ -120,6 +120,9 @@ display:revert; revert to element instead of attribute */
   --clr-offwhite: hsl(0, 0%, 94%);
   --clr-white: hsl(0, 0%, 100%);
   --clr-button-red: hsl(0, 87%, 47%);
+  --border: hsl(240, 5.9%, 90%);
+  --input: hsl(240, 5.9%, 90%);
+  --ring: hsl(240, 5%, 64.9%);
 
   --ff-primary: "Be Vietnam Pro", sans-serif;
 
@@ -156,11 +159,16 @@ display:revert; revert to element instead of attribute */
   --size-900: 5rem;
 
   --ff-inter: "Inter", sans-serif;
+
+  --ring-offset-shadow: 0 0 #0000;
+  --ring-shadow: 0 0 #0000;
+  --shadow: 0 0 #0000;
 }
 
 body,
-head {
+header {
   font-family: var(--ff-inter);
+  background-color: var(--clr-offwhite);
 }
 
 /* Utility classes */
@@ -343,7 +351,7 @@ head {
 
 .grid-2x4 {
   grid-template-columns: repeat(4, minmax(10%, 1fr));
-  grid-auto-rows: 165px;
+  grid-auto-rows: 155px;
 }
 
 .my-4 {
@@ -351,6 +359,11 @@ head {
 }
 
 /* gonna expand on the utlity class later */
+
+.logo {
+  height: 30px;
+  width: auto;
+}
 
 header {
   display: flex;
@@ -389,24 +402,47 @@ header p {
 }
 
 form {
-  background-color: var(--clr-offwhite);
   display: flex;
+  gap: 0.5rem;
+  background-color: var(--clr-white);
   position: absolute;
   top: 85%;
-  padding: var(--size-300) var(--size-500);
-  border-radius: var(--size-600);
-  gap: var(--size-500);
-  align-items: center;
+  border-radius: 8rem;
   font-size: 0.8rem;
+  padding: 0 2rem;
+  padding-top: 0.8rem;
+  padding-bottom: 1rem;
 }
 
 label {
-  font-size: 0.9rem;
+  color: hsl(240, 10%, 3.9%);
+  line-height: 1;
+  font-weight: 500;
+  font-size: 0.875rem;
+}
+
+input {
+  display: flex;
+  height: 2.25rem;
+  width: 100%;
+  border-style: solid;
+  border-width: 1.5px;
+  border-radius: 0.5rem;
+  padding: 0.25rem 0.75rem;
+  font-size: 0.875rem;
+  background-color: transparent;
+  border-color: var(--input);
+  box-shadow: var(--ring-offset-shadow, 0 0 #0000),
+    var(--ring-shadow, 0 0 #0000), var(--shadow);
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+  position: relative;
 }
 
 input::placeholder {
-  opacity: 0.8;
-  letter-spacing: 0.2px;
+  color: hsl(240, 3.8%, 46.1%);
 }
 
 input:focus {
@@ -414,19 +450,10 @@ input:focus {
   box-shadow: 0 0 5px rgb(115, 115, 115);
 }
 
-input {
-  border-radius: 2px;
-  cursor: text;
-  padding: 2px 2px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(160, 160, 160);
-}
-
-.form-wrap {
+.form-child {
   display: flex;
   flex-direction: column;
-  gap: var(--size-100);
+  gap: 0.375rem;
 }
 
 .center {
@@ -440,8 +467,22 @@ input {
 
 .btn {
   display: flex;
+  align-items: center;
   justify-content: center;
-  border-radius: var(--size-300);
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
+  white-space: nowrap;
+  padding: 0.25rem 0.75rem;
+  height: 2.25rem;
+}
+
+label[aria-hidden="true"] {
+  visibility: hidden;
 }
 
 main {
@@ -561,7 +602,7 @@ main {
   justify-content: space-between;
   margin-top: 2.75rem;
   padding: var(--size-500);
-  background-color: var(--clr-offwhite);
+  background-color: var(--clr-white);
   border-radius: 10px;
   align-items: center;
 }
@@ -578,7 +619,7 @@ main {
 
 footer {
   padding: 2rem var(--size-600);
-  background-color: var(--clr-offwhite);
+  background-color: var(--clr-white);
   margin-top: 2.75rem;
   line-height: 1.6;
 }
