--- a/Hotel Details page/detail.css
+++ b/Hotel Details page/detail.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
 header{
     display: flex;
     background-color: rgb(151, 124, 124);
