--- a/Home page/home.css
+++ b/Home page/home.css
@@ -8,9 +8,7 @@
     - The "symbol *" part is to solve Firefox SVG sprite bug
     - The "html" element is excluded, otherwise a bug in Chrome breaks the CSS hyphens property (https://github.com/elad2412/the-new-css-reset/issues/36)
  */
-*:where(
-    :not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
-  ) {
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
   all: unset;
   display: revert;
 }
@@ -358,9 +356,106 @@ header {
   margin-bottom: var(--size-400);
 }
 
+.revealed {
+  animation: show 1s forwards ease-out;
+}
+
+@keyframes show {
+  0% {
+    opacity: 0;
+    transform: translate(0, 25%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
 /* gonna expand on the utlity class later */
+.banner {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), #9d616b), url(./assets/images/hotel-7540353_1920.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
 
 .logo {
+  width: 140px;
+  position: absolute;
+  top: 5%;
+  left: 10%;
+}
+
+.banner-text {
+  text-align: center;
+  color: #fff;
+  padding-top: 180px;
+}
+
+.banner-text h1 {
+  font-size: 130px;
+}
+
+.banner-text p {
+  font-size: 20px;
+  font-style: italic;
+}
+
+.banner-btn {
+  margin: 80px auto 0;
+}
+
+.banner-btn button {
+  min-width: 150px;
+  font-size: 15px;
+  text-decoration: none;
+  margin: 0 10px;
+  color: #fff;
+  padding: 20px 30px;
+  border: 0.5px solid;
+  border-radius: 3px;
+  position: relative;
+  z-index: 1;
+  transition: 0.5s;
+}
+
+.banner-btn button span {
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: -1;
+  transition: 0.5s;
+}
+
+.banner-btn button:hover span {
+  width: 100%;
+  border-radius: 3px;
+}
+
+.banner-btn button:hover {
+  color: rgb(94, 94, 94);
+}
+
+@media screen and (max-width: 770px) {
+  .banner-text h1 {
+    font-size: 44px;
+  }
+  .banner-btn button {
+    display: block;
+    margin: 20px auto;
+  }
+}
+
+.home {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.nav-logo {
   height: 30px;
   width: auto;
 }
@@ -432,10 +527,8 @@ input {
   font-size: 0.875rem;
   background-color: transparent;
   border-color: var(--input);
-  box-shadow: var(--ring-offset-shadow, 0 0 #0000),
-    var(--ring-shadow, 0 0 #0000), var(--shadow);
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke;
+  box-shadow: var(--ring-offset-shadow, 0 0 #0000), var(--ring-shadow, 0 0 #0000), var(--shadow);
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
   position: relative;
@@ -472,8 +565,7 @@ input:focus {
   border-radius: 0.5rem;
   font-size: 0.875rem;
   font-weight: 500;
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
   white-space: nowrap;
