update with the home page

--- a/Hotel Details page/detail.css
+++ b/Hotel Details page/detail.css
@@ -84,7 +84,7 @@ header{
     background-color: rgb(199, 44, 70);
   }
   .button .button1:hover {
-    background-color: rgb(199, 44, 70);
+    background-color: #c72c46;
   }
   .icon1 {
     display: flex;
