--- a/Hotel Details page/detail.css
+++ b/Hotel Details page/detail.css
@@ -1,207 +1,416 @@
-* {
+header {
+  display: flex;
+  background-color: rgb(207, 205, 205);
+  justify-content: space-around;
+  margin: none;
+  width: 100%;
+  height: 70px;
+}
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+body {
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.leftMargin {
+  margin-left: 60px;
+}
+p {
+  font-weight: 100;
+  font-family: "Times New Roman", Times, serif;
+  color: rgb(59, 56, 56);
+}
+.heading1 {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  align-items: center;
+  text-decoration: none;
+}
+.navigation {
+  list-style-type: none;
+}
+.navigation li {
+  display: inline-block;
+  margin-left: 30px;
+}
+.navigation a {
+  color: rgb(17, 17, 17);
+}
+.navigation a:hover {
+  color: red;
+}
+.buttonStyle {
+  background-color: red;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 100px;
+  color: #ffffff;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border: none;
+  width: 150px;
+}
+.buttonDiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
+}
+.buttonStyle:hover {
+  background-color: rgb(199, 44, 70);
+}
+
+/* .button {
+  background-color: rgb(248, 45, 79);
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 100px;
+  color: #ffffff;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  text-align: center;
+} */
+/* .button1 {
+  background-color: rgb(248, 45, 79);
+  color: #fff;
+  border-radius: 300px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 10px;
+  margin-right: 30px;
+  width: 100px;
+  border: none;
+}
+.button.button1 {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(248, 45, 79);
+  border: none;
+  color: white;
+} */
+.image {
+  margin-bottom: 0%;
+  border-radius: 5%;
+}
+.RoomName {
+  margin-top: 0%;
+  padding: 0%;
+}
+.HotelImage {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+/* .bigImage{
+  width: 100%;
+} */
+.smallImage {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+.tinyImage {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.arrow {
+  width: 100px;
+}
+.HotelName {
+  display: flex;
+  justify-content: space-between;
+}
+.HotelName h2 {
+  margin-bottom: 0px;
+}
+.HotelName p {
+  margin-top: 0px;
+}
+.reviewInfo {
+  display: flex;
+  justify-content: space-between;
+}
+.reviewInfo h3 {
+  margin-bottom: 0px;
+  margin-right: 10px;
+}
+.reviewInfo p {
+  margin-top: 0px;
+  margin-right: 10px;
+}
+.hotelButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 100px;
+  background-color: rgb(177, 172, 172);
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border: none;
+  width: 100px;
+}
+.hotelButton:hover {
+  background-color: rgb(133, 128, 129);
+}
+.navigation1 {
+  list-style-type: none;
+}
+.navigation1 li {
+  display: inline-block;
+  margin-left: 30px;
+}
+.navigation1 a {
+  color: black;
+}
+.navigation1 a:hover {
+  color: red;
+}
+.navigation2 {
+  list-style-type: none;
+}
+.navigation1 li {
+  display: inline-block;
+  margin-left: 30px;
+}
+.navigation2 a {
+  color: black;
+}
+.navigation2 a:hover {
+  color: red;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: none;
+  background-color: rgb(177, 176, 175);
+  width: 100%;
+}
+.rating {
+  font-size: 0;
+}
+.rating input {
+  display: none;
+}
+.rating label {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
   margin: 0;
   padding: 0;
+  font-size: 24px;
+  text-align: center;
+  line-height: 20px;
+  cursor: pointer;
+  color: #ccc;
+  transform: rotateY(180deg);
 }
-
-img {
+.rating label:hover,
+.rating label:hover ~ label,
+.rating input:checked ~ label {
+  color: rgb(199, 44, 70);
+}
+.sidebar {
+  background-color: bisque;
+  width: 300px;
+}
+.reviews {
+  display: flex;
+  gap: 200px;
+  background-color: aliceblue;
+}
+.review1 {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+}
+.overviewProperty {
+  display: flex;
+  justify-content: space-between;
+}
+.Overview {
+  display: flex;
+  gap: 30px;
+}
+.Overview .list {
+  list-style-type: none;
+}
+.icon1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: rgb(192, 189, 189);
+  margin-left: 60px;
+  margin-right: 0px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+.roomsBack {
+  background-color: rgb(192, 189, 189);
+  /* margin: 0px; */
+  margin-bottom: 50px;
   width: 100%;
-  max-width: 100%;
+}
+.room {
+  background-color: white;
+  border-radius: 5%;
+  margin-bottom: 50px;
+}
+.buttonStyle2 {
+  background-color: red;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 100px;
+  color: #ffffff;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border: none;
+  width: 100%;
+}
+.buttonStyle2:hover {
+  background-color: rgb(252, 49, 49);
+}
+.review2 {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.hotelButton1 {
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: rgb(177, 172, 172);
+  transition: background-color 0.3s ease, color 0.3s ease;
+  border: none;
+  width: 60px;
 }
 
-header{
-    display: flex;
-    background-color: rgb(151, 124, 124);
-    justify-content: space-around;
-    margin-top: none;
-    width: 100%;
-    height: 100%;
+@media only screen and (max-width: 768px) {
+  .header-container {
+    flex-direction: column;
+    align-items: center;
   }
   .header-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-  }
-  .heading1 {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
+    flex-direction: column;
     align-items: center;
-    text-decoration: none;
   }
+
   .navigation {
-    list-style-type: none;
+    text-align: center;
+    margin-top: 10px;
   }
+
   .navigation li {
-    display: inline-block;
-    margin-left: 30px;
+    display: block;
+    margin: 10px 0;
   }
-  h2 {
-    color: white;
+
+  .buttonDiv {
+    flex-direction: column;
+    align-items: center;
   }
-  .navigation a {
-    color: white;
-  }
-  .navigation a:hover {
-    color: red;
-  }
-  .button {
-    background-color: rgb(248, 45, 79);
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 100px;
-    color: #ffffff;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    text-align: center;
-  }
-  .signup {
-    margin-left: 100px;
-  }
-  
-  .button1 {
-    background-color: rgb(248, 45, 79);
-    color: #fff;
-    border-radius: 300px;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 10px;
-    margin-right: 30px;
-    width: 100px;
-    border: none;
-  }
-  .button.button1 {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(248, 45, 79);
-    border: none;
-    color: white;
-  }
-  .button:hover {
-    background-color: rgb(199, 44, 70);
-  }
-  .button .button1:hover {
-    background-color: #c72c46;
-  }
-  .icon1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-  }
-  .image {
-    margin-bottom: 0%;
-    border-radius: 10%;
-  }
-  .RoomName {
-    margin-top: 0%;
-    padding: 0%;
-  }
-  .HotelImage {
-    display: flex;
-    justify-content: space-around;
-    background-color: aliceblue;
-  }
+
   .smallImage {
-    display: flex;
-    justify-content: space-between;
-    gap: 30px;
+    flex-direction: column;
+    gap: 10
+
   }
-  .arrow {
+
+  .navigation {
+    text-align: center;
+    margin-top: 10px;
   }
-  .HotelName {
-    display: flex;
-    justify-content: space-between;
+
+  .navigation li {
+    display: block;
+    margin: 10px 0;
   }
-  .reviewInfo {
-    display: flex;
-    justify-content: space-between;
+
+  .buttonDiv {
+    flex-direction: column;
+    align-items: center;
   }
-  .navigation1 {
-    list-style-type: none;
-  }
-  .navigation1 li {
-    display: inline-block;
-    margin-left: 30px;
-  }
-  .navigation1 a {
-    color: black;
-  }
-  .navigation1 a:hover {
-    color: red;
-  }
-  .navigation2 {
-    list-style-type: none;
-  }
-  .navigation1 li {
-    display: inline-block;
-    margin-left: 30px;
-  }
-  .navigation2 a {
-    color: black;
-  }
-  .navigation2 a:hover {
-    color: red;
-  }
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    margin-top: none;
-    background-color: rgb(136, 128, 117);
-    width: 100%;
-  }
-  .rating {
-    font-size: 0;
-  }
-  .rating input {
+  .bigImage{
     display: none;
   }
-  .rating label {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    font-size: 24px;
+  .smallImage {
+    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    margin-right: 250px;
+    gap: 10px;
+  }
+
+  .HotelName {
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    line-height: 20px;
-    cursor: pointer;
-    color: #ccc;
-    transform: rotateY(180deg);
   }
-  .rating label:hover,
-  .rating label:hover ~ label,
-  .rating input:checked ~ label {
-    color: rgb(199, 44, 70);
+
+  .reviewInfo {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
-  .sidebar {
-    background-color: bisque;
-    width: 300px;
+
+  .hotelButton {
+    width: 100%;
+    margin-top: 10px;
   }
-  .reviews {
-    display: flex;
-    gap: 200px;
-    background-color: aliceblue;
-  }
-  .review1 {
-    display: flex;
-    align-items: start;
-    justify-content: space-between;
-  }
-  .overviewBack {
-    background-color: beige;
-  }
+
   .overviewProperty {
-    display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
-  .Overview {
-    display: flex;
-    gap: 30px;
-  }
+
   .Overview .list {
-    list-style-type: none;
+    text-align: center;
   }
-  
+
+  .icon1 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .roomsBack {
+    margin-bottom: 30px;
+  }
+
+  .room {
+    margin-bottom: 30px;
+  }
+
+  .buttonStyle2 {
+    width: 100%;
+  }
+
+  .review2 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hotelButton1 {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+}
