--- a/Review Submission page/review.css
+++ b/Review Submission page/review.css
@@ -1,124 +1,121 @@
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
 .review-submission {
-    display: flex;
-  }
-  
-  .left-section {
-    flex: 1;
-    margin-right: 10%;
-    margin-left: 3%;
-  }
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-  }
-  
-  .right-section {
-    flex: 1;
-    padding-left: 50px;}
-    .vline{
-    border-left:1px solid black;
-    height: 800px;
-    margin-left: 5%;
-    
-  }
-  
-  .review-form {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  
-  h2 {
-    margin-top: 0;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  label.checkk{
-    display: inline;
-  }
-  form {
-    margin-top: 20px;
-  }
-  
-  input[type="text"],
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-  
-  input[type="file"] {
-    display: block;
-    margin-top: 5px;
-  }
-  
-  button[type="submit"] {
-    background-color:rgb(255, 95, 31);
-    color: white;
-    height:36px;
-    width: 135px;
-    border-radius:107px;
-    cursor:point;
-    margin-right: 8px;
-    border:none;
-    
-    }
-    input[type="submit"]:hover{
+  display: flex;
+}
 
-        opacity:0.7;
-    }
-    input[type="email"],
-    input[type="password"],
-    input[type="text"],
-    input[type="number"] {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    input[type='checkbox'] {
-      margin-right: 5px;
-      margin-bottom: 20px;
-    }
-    
+.left-section {
+  flex: 1;
+  margin-right: 10%;
+  margin-left: 3%;
+}
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+}
 
-  .review-box {
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 20px;
-    width: 300px;
-    border: 0.01px solid black;
-    padding:10px ;
-    margin: 20px;
-  }
-  
-  .profile-picture {
-    width: 120px;
-    height: 45px;
-    border-radius: 50%;
-    background-color: #ccc;
-    margin-right: 10px;}
-    
-  .profile{
-    width:60px;
-    border-radius: 50px;
-  }
-  
-  .name {
-    margin: 0;
-  }
-  
-  .review-text {
-    margin-top: 5px;
-  }
+.right-section {
+  flex: 1;
+  padding-left: 50px;
+}
+.vline {
+  border-left: 1px solid black;
+  height: 800px;
+  margin-left: 5%;
+}
 
-  
-  
+.review-form {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+label.checkk {
+  display: inline;
+}
+form {
+  margin-top: 20px;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+input[type="file"] {
+  display: block;
+  margin-top: 5px;
+}
+
+button[type="submit"] {
+  background-color: rgb(255, 95, 31);
+  color: white;
+  height: 36px;
+  width: 135px;
+  border-radius: 107px;
+  cursor: point;
+  margin-right: 8px;
+  border: none;
+}
+input[type="submit"]:hover {
+  opacity: 0.7;
+}
+input[type="email"],
+input[type="password"],
+input[type="text"],
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+input[type="checkbox"] {
+  margin-right: 5px;
+  margin-bottom: 20px;
+}
+
+.review-box {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  width: 100%;
+  border: 0.01px solid black;
+  margin: 20px auto;
+}
+
+.profile-picture {
+  width: 120px;
+  margin-right: 20px;
+}
+
+.profile {
+  width: 90%;
+  border-radius: 50%;
+  margin: 15px 15px;
+}
+
+.name {
+  margin: 0;
+}
+
+.review-text {
+  margin-top: 10px;
+}
