--- a/Hotel Details page/detail.css
+++ b/Hotel Details page/detail.css
@@ -6,6 +6,30 @@ header {
   width: 100%;
   height: 70px;
 }
+
+.review {
+  border: 2px white solid;
+  /* display: inline; */
+  width: 80px;
+  padding: 20px 80px;
+  margin: 20px auto;
+  background-color: rgb(239, 78, 9);
+  text-align: center;
+  border-radius: 5%;
+}
+
+.review a {
+  color: white;
+  font-weight: bold;
+}
+
+.logo {
+  width: 150px;
+  position: ;
+  top: 4%;
+  left: 2%;
+}
+
 .header-container {
   display: flex;
   justify-content: space-between;
