--- a/Login and registration/style.css
+++ b/Login and registration/style.css
@@ -109,10 +109,22 @@ span {
   position: absolute;
 }
 
-#login{
+#login-form{
   left: 50px;
 }
 
-#register {
+#register-form {
   left: 450px;
+}
+
+#success-message {
+  display: none;
+  font-size: 15px;
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+  padding: 10px;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
 }
