--- a/Hotel Data Enrtry Form/style.css
+++ b/Hotel Data Enrtry Form/style.css
@@ -8,7 +8,9 @@
     - The "symbol *" part is to solve Firefox SVG sprite bug
     - The "html" element is excluded, otherwise a bug in Chrome breaks the CSS hyphens property (https://github.com/elad2412/the-new-css-reset/issues/36)
  */
-*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+*:where(
+    :not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
+  ) {
   all: unset;
   display: revert;
 }
@@ -215,9 +217,6 @@ header {
 }
 
 form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
   background-color: var(--clr-white);
   font-size: 0.8rem;
   padding: 0 2rem;
@@ -234,7 +233,6 @@ label {
 
 input,
 textarea {
-  display: flex;
   height: 2.25rem;
   width: 100%;
   border-style: solid;
@@ -244,8 +242,10 @@ textarea {
   font-size: 0.875rem;
   background-color: transparent;
   border-color: var(--input);
-  box-shadow: var(--ring-offset-shadow, 0 0 #0000), var(--ring-shadow, 0 0 #0000), var(--shadow);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  box-shadow: var(--ring-offset-shadow, 0 0 #0000),
+    var(--ring-shadow, 0 0 #0000), var(--shadow);
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.15s;
   position: relative;
@@ -260,26 +260,11 @@ textarea::placeholder {
   color: hsl(240, 3.8%, 46.1%);
 }
 
-.form-child {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
 input[type="checkbox"] {
+  display: inline;
+  margin-right: 0.4rem;
   width: 10px;
   appearance: auto;
-}
-
-.checkbox {
-  display: flex;
-  flex-direction: column;
-}
-
-.checkbox div {
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
 }
 
 .submit {
